--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ul>
     <li><b><u><mark>Tim Berners-Lee</mark>:</u></b> WWW,HTTP,HTML,URI</li>
     <li><b>Hakom Lie and Bert Bos:</b> CSS</li>
-    <li><b>Brendan Eich: Java Script</b></li>
+    <li><b>Brendan Eich:</b> Java Script</li>
 </ul>
 <hr>
 <br>
