--- a/index.html
+++ b/index.html
@@ -5,39 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1> Übung 1.2: Inventors of the web</h1>
+<h1>Übungsaufgaben</h1>
 
-<ul>
-    <li><b><u><mark>Tim Berners-Lee</mark>:</u></b> WWW,HTTP,HTML,URI</li>
-    <li><b>Hakom Lie and Bert Bos:</b> CSS</li>
-    <li><b>Brendan Eich:</b> Java Script</li>
-</ul>
-<hr>
-<br>
-
-<h2> Inventors of the WWW</h2>
-<table border="10">
-
-    <tr><th colspan = "4">Inventors of the WWW</th></tr>
-    <tr><th>WWW</th><th>HTML</th><th>CSS</th><th>JavaScript</th></tr>
-    <tr><td><mark>Tim Berners-Lee</mark></td><td><mark>Tim Berners-Lee</mark></td><td>Hakom Lie and Bert Bos</td><td>Brendan Eich</td></tr>
-
-</table>
-<br>
-<hr>
-<h3>Inventors of the WWW</h3>
-<hr width="50%" align="left">
-<table>
-    <tr><th>HTML</th><th>|</th><th>JavaScript</th></tr>
-    <tr><td><img src="https://kaul.inf.h-brs.de/ccm/we/ws22/resources/img/assets/tbl.jpg"></td><th>|</th><td><img src="https://kaul.inf.h-brs.de/ccm/we/ws22/resources/img/assets/eich.jpg"></td></tr>
-    <tr><th><mark>Tim Berners-Lee</mark></th><th>|</th><th>Brendan Eich</th></tr>
-
-</table>
-<hr>
-
-
-
-
-
+<p><a href="übung1.html">Link zu Übung 1.1</a></p>
+<p><a href="übung1_2.html">Link zu Übung 1.2</a></p>
 </body>
 </html>
