--- a/übung1.html
+++ b/übung1.html
@@ -10,34 +10,41 @@
 <h2>1.1. Fachliche Argumentation über Erfolgsprinzipien des WWW</h2>
 <ol>
     <li><b>Mit welchen fachlichen Argumenten wurde das WWW-Proposal von TBL abgelehnt?</b></li>
-    <dd>- Unterschiedliche Vorstellung der Jury über das Thema Hypertext (Wissenschaft sei schon weiter fortgeschritten)</dd>
-    <dd>- Hyperlinks die ins Leere zeigen (broken links)</dd>
-    <dd>- TBLs Vorschlag sei ein Rückschritt</dd>
-    <dd>- Verwechslung der Vagheit mit Evolvierbarkeit</dd>
+    <ul>
+        <li> Unterschiedliche Vorstellung der Jury über das Thema Hypertext (Wissenschaft sei schon weiter fortgeschritten)</li>
+        <li>Hyperlinks die ins Leere zeigen (broken links)</li>
+    <li> TBLs Vorschlag sei ein Rückschritt</li>
+     <li>Verwechslung der Vagheit mit Evolvierbarkeit</li>
+    </ul>
     <li><b>Was sind die fachlichen Argumente, warum das WWW dennoch ein Erfolg wurde?</b></li>
-    <dd>- An der Zukunft des Webs wird eifrig gearbeitert</dd>
-    <dd>- Lebendigkeit des Webs gibt TBLs Idee recht</dd>
+     <ul>
+         <li>An der Zukunft des Webs wird eifrig gearbeitert</li>
+         <li> Lebendigkeit des Webs gibt TBLs Idee recht</li>
+     </ul>
     <li><b>Was wäre der Preis für die garantierte Verhinderung von “broken links”?</b></li>
-    <dd>- Zentrale Kontrolle</dd>
-    <dd>- Geschlossenheit</dd>
+<ul>
+    <li> Zentrale Kontrolle</li>
+<li> Geschlossenheit</li>
+</ul>
 </ol>
 <h2>1.2. HTTP</h2>
 <ol>
 <li><b>Sie bekommen im Browser den HTTP Status Code 200. Was bedeutet das?</b></li>
-    <dd>- Success</dd>
+    <ul><li>Success</li></lii></ul>
     <li><b>Sie bekommen im Browser den HTTP Status Code 301. Was hat das zu bedeuten?</b></li>
-    <dd>- Eine ehemalige URL wird auf eine neue URL weitergeleitet.</dd>
+    <ul><li>Eine ehemalige URL wird auf eine neue URL weitergeleitet.</li></ul>
     <li><b>Sie bekommen im Browser den HTTP Status Code 400. Was hat das zu bedeuten? Was können Sie dagegen tun?</b></li>
-    <dd>- Fehlerhafte Anfrage.Fehler melden mit Statuscode</dd>
+    <ul><li>Fehlerhafte Anfrage.Fehler melden mit Statuscode</li></ul>
     <li><b>Sie bekommen im Browser den HTTP Status Code 403. Was hat das zu bedeuten? Was können Sie dagegen tun?</b></li>
-    <dd>- Fehlende Zugriffsberechtigung. Fehler melden mit Stauscode</dd>
+    <ul><li>Fehlende Zugriffsberechtigung. Fehler melden mit Stauscode</li></ul>
     <li><b>In einer Webanwendung benötigen Sie eine OPTIONS-Anfrage, die die Optionen des Servers vor dem eigentlichen Zugriff erfragen soll. Aus Performanzgründen soll die Abfrage jedoch cacheable sein. Wie könnten Sie dafür eine Lösung angehen?</b></li>
-    <dd>- ???</dd>
+    <ul><li>???</li></ul>
 </ol>
 <h2>1.3. HTML-Literatur lesen und Fragen beantworten</h2>
 <ol>
     <li><b>Was ist HTML?</b></li>
     <li><b>Wie kann man eine geschachtelte geordnete Liste der Schachtelungstiefe 3 erzeugen?</b></li>
+    <ul><li><pre>&ltul&gt&ltul&gt&ltul&gt&lt/ul&gt&lt/ul&gt&lt/ul&gt</pre></li></ul>
     <li><b>Wie ist eine HTML-Tabelle aufgebaut?</b></li>
     <li><b>Welche Konventionen sollte man bei Pfaden und Dateinamen beachten?</b></li>
     <li><b>Wie baut man in HTML ein Menü?</b></li>
