--- a/übung1.html
+++ b/übung1.html
@@ -44,7 +44,7 @@
 <ol>
     <li><b>Was ist HTML?</b></li>
     <li><b>Wie kann man eine geschachtelte geordnete Liste der Schachtelungstiefe 3 erzeugen?</b></li>
-    <ul><li><pre>&ltul&gt&ltul&gt&ltul&gt&lt/ul&gt&lt/ul&gt&lt/ul&gt</pre></li></ul>
+    <ul><li><pre>&ltol&gt&ltol&gt&ltol&gt&lt/ol&gt&lt/ol&gt&lt/ol&gt</pre></li></ul>
     <li><b>Wie ist eine HTML-Tabelle aufgebaut?</b></li>
     <li><b>Welche Konventionen sollte man bei Pfaden und Dateinamen beachten?</b></li>
     <li><b>Wie baut man in HTML ein Menü?</b></li>
