--- a/übung1.html
+++ b/übung1.html
@@ -46,6 +46,7 @@
     <li><b>Wie kann man eine geschachtelte geordnete Liste der Schachtelungstiefe 3 erzeugen?</b></li>
     <ul><li><pre>&ltol&gt&ltol&gt&ltol&gt&lt/ol&gt&lt/ol&gt&lt/ol&gt</pre></li></ul>
     <li><b>Wie ist eine HTML-Tabelle aufgebaut?</b></li>
+    <ul><li>zeilen und spalten</li></ul>
     <li><b>Welche Konventionen sollte man bei Pfaden und Dateinamen beachten?</b></li>
     <li><b>Wie baut man in HTML ein Menü?</b></li>
     <li><b>Welche Attribute sollte man bei Bildern wie verwenden?</b></li>
