Übung 3.1 Desktop first Strategy mit flexbox überarbeitet

--- a/übung3_1.html
+++ b/übung3_1.html
@@ -6,36 +6,43 @@
     <title>Title</title>
     <style>
 
-        .flex-container{display:flex;flex-wrap:wrap;margin:auto;}
+        .flex-container{display:flex;flex-wrap:wrap;margin: 0 auto;}
         .header{background-color:red;}
         .nav{background-color:green;}
         .main{background-color:blue;}
         .aside{background-color:pink;}
         .column{
         --columns: 12;
-        --width: 0;
+        --width: 1;
           flex-basis: calc(var(--width) / var(--columns) * 100% - 2px);
         }
-
-
 
         .header, .main, .nav, .aside{
         --width: 12;
         }
 
-        @media only screen and (min-width: 520px){
+
+
+           @media only screen and (min-width: 360px){
 
         .main{--width: 8;}
          .nav{--width: 4;}
 
+
         }
-          @media only screen and (min-width: 1280px){
+            @media only screen and (min-width: 720px){
 
         .main{--width: 8;}
          .nav{--width: 2;}
          .aside{--width: 2;}
 
+
         }
+
+
+
+
+
 
 
 
