--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     grid-template-rows: auto 1fr;
 }
 main{background-color:#f9f9f9;}
-header{ grid-column: 1/5;grid-row: 1/2;background-color: #a19077;overflow: auto;display:grid;
-grid-template-columns: 1fr 1fr 1fr auto;grid-template-rows: 1fr;}
+header{ grid-column: 1/5;grid-row: 1/2;background-color: #d7e3e5;overflow: auto;display:grid;
+grid-template-columns: 1fr 1fr 1fr 1fr;grid-template-rows: 1fr;}
 main{grid-column: 1/5;grid-row: 2/3;}
 .iconbar{
     grid-column: 1/2;
@@ -20,37 +20,35 @@ main{grid-column: 1/5;grid-row: 2/3;}
 }
 .iconbar a:hover{
     background-color: #f9f9f9;
-    color:#a19077;
+    
+}
+.loginbar a:hover{
+    background-color: #f9f9f9;
+    
 }
 .iconbar>*{
     float: left;
-  width: 20%;
+  width: 50px;
   text-align: center;
   padding: 12px 0;
   transition: all 0.3s ease;
-  color: white;
-  font-size: 2rem;
+  color: #3c413d;
+  font-size: 1.5rem;
+}
+.loginbar{
+  grid-column: 4/5;
+  grid-row: 1/2;
+}
+.loginbar>*{
+    float: right;
+  width: 50px;
+  text-align: center;
+  padding: 12px 0;
+  transition: all 0.3s ease;
+  color: #3c413d;
+  font-size: 1.5rem;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-
-  background-color:#f9f9f9;
-}
-
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
-li a:hover {
-  background-color: 
-#e7e9eb;
-  
-}
 
 @media (min-width: 992px) {
 container{
@@ -74,6 +72,9 @@ grid-row:2/3;}
   <a href="#"><i class="fa fa-bars"></i></a> 
   <a href="#"><i class="fa fa-home"></i></a> 
 
+   </div>
+   <div class="loginbar">
+   <a href="#"><i class="fa fa-user" aria-hidden="true"></i></a>
    </div>
 </header>
 <main><h2>Main</h2>
