--- a/übung1_2.html
+++ b/übung1_2.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>uebung 1.2</title>
+    <style>
+        body{
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
 <h1> Übung 1.2: Inventors of the web</h1>
