--- a/übung1.html
+++ b/übung1.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>uebung1</title>
+    <style>
+        body{background-color:white;}
+    </style>
 </head>
 <body>
 <h1> Übung 1</h1>
