--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@ grid-row:1/2;}
 <p style="text-align:center">Übungen</p>
 <hr style="width:90%">
 <button onclick="setupU_4()">Übung 4</button>
-<button onclick="setupU_5_1()">Übung 5.1</button>
-<button onclick="setupU_5_2()">Übung 5.2</button>
+<button onclick="setupU_5_1()">Performanz-Messungen von DOM-Operationen</button>
+<button onclick="setupU_5_2()">Rednerliste mit Zeitmessung</button>
 <button onclick="setupU_5_3()">TopSort als Web-App</button>
 <button onclick="setupU_6_1()">Klammerpaare</button>
 <button onclick="setupU_7()">Textanalyse</button>
@@ -314,6 +314,7 @@ grid-row:1/2;}
 </div>
 
 <script>
+  
   class Mainbereich{
     constructor(){
       this.main_container = null;
@@ -661,7 +662,7 @@ function setupU_5_1(){
  
 
   let ueberschrift = document.createElement("h1");
-  ueberschrift.appendChild(document.createTextNode("Übung 5.1"));
+  ueberschrift.appendChild(document.createTextNode("Performanz-Messungen von DOM-Operationen"));
   var tabelle = document.createElement("table");
   
   tabelle.setAttribute("id","benchmarktabelle");
@@ -1079,19 +1080,158 @@ function setupU_7(){
   let main_main_ref = document.getElementById("main_main");
   let main_header_ref = document.getElementById("mainheader");
  let Plagiatsresolution = document.createElement("div");
+ Plagiatsresolution.setAttribute("id","plagiatresolution");
  let header = document.createElement("header");
- header.innerHTML = '<h2 class="field field--name-title field--type-ds field--label-hidden">Plagiatsresolution und -maßnahmen</h2><p><strong>Resolution zum akademischen Ethos und zu den akademischen Standards</strong></p><p>In guter Tradition und anlässlich der öffentlichen Diskussion zum Plagiatsthema sieht sich die HochschuleBonn-Rhein-Sieg in der Pflicht, ihre Position klar und eindeutig zu bekunden und hochschulweit Maßnahmeneinzuleiten.</p> <p> 1. Die Hochschule Bonn-Rhein-Sieg bekennt sich mit dieser Resolution öffentlich zum akademischen Ethos und den akademischen Standards.</p><p> 2. Die Hochschule Bonn-Rhein-Sieg sieht sich verpflichtet, alle Studierende frühzeitig im Studium sowohlüber den wissenschaftlichen Auftrag und den akademischen Ethos als auch über die Konsequenzen seiner Missachtung aufzuklären. In allen Studiengängen wird intensiv in die wissenschaftliche Arbeits- undDenkweise eingeführt und über den akademischen Ethos und die akademischen Standards klar und eindeutig aufgeklärt.</p><p>3. In einer Selbstverpflichtungserklärung zum akademischen Ethos geben alle Studierende der Hochschule Bonn-Rhein-Sieg spätestens gegen Ende des ersten Studienjahres zum Ausdruck, dass sie sich von den Dozentinnen und Dozenten der Hochschule Bonn-Rhein-Sieg hinreichend über den akademischen Ethos und die akademischen Standards aufgeklärt sind und diese beachten werden.</p><p> Der Senat befürwortete in seiner Sitzung am 03.05.2012 die Resolution in der o.g. Fassung.</p><p><strong>Eckpunkte zur Plagiatsprüfung</strong></p>          <p>Der Senat empfiehlt:</p><p> 1. Die Aufklärung und das Bekenntnis zum akademischen Ethos und den akademischen Standards muss feste Bestandteil aller Curricula aller Studiengänge im ersten Studienjahr sein. Alle Curricula aller Studiengänge werden darauf hin geprüft und ggfs. ergänzt.</p><p>2. Alle Abschlussarbeiten werden auf Plagiate geprüft.</p><p>3. Alle Abschlussarbeiten mit Plagiaten werden grundsätzlich als Fehlversuch gewertet.</p><p> 4. Die Entscheidung, ob die Arbeit Plagiate enthält, liegt zuerst bei den Gutachterinnen und Gutachtern. Der Nachweis in einem Gutachten reicht.</p> <p> 5. Alle Abschlussarbeiten werden grundsätzlich auch in elektronischer Form (PDF-Format und Originalformat wie Word, OpenOffice, ...) eingereicht.</p> <p> 6. Alle Abschlussarbeiten ohne Sperrvermerk werden einem vom Fachbereich definierten Kreis zur Einsicht zur Verfügung gestellt. Alle Abschlussarbeiten sollten nach Möglichkeit grundsätzlich zur Veröffentlichung freigegeben werden. Wissenschaft zielt auf Veröffentlichung ab. Nichtveröffentlichung sollte nur in begründeten und durch den Prüfungsausschuss genehmigten Ausnahmefällen geschehen.</p><p>  7. Im Bereich von Seminar-, Hausarbeiten und Praktikumsberichten behält sich die Hochschule  stichprobenartige Plagiatsprüfungen vor.</p> <p>  <strong>Selbstverpflichtungserklärung der Studierenden:</strong></p> <p>  Eine akademische Arbeit stellt eine individuelle Leistung dar, die eigenständig und allein auf Basis der im Literaturverzeichnis angegebenen Quellen erstellt wurde und in der alle Zitate als solche gekennzeichnet sind.</p><p> "Ich erkläre hiermit, dass ich den akademischen Ehrencodex kenne und über die Folgen einer Missachtung oder Verletzung aufgeklärt worden bin."</p>';
+ let analysebutton = document.createElement("button");
+ let analysebuttondiv = document.createElement("div");
+ analysebutton.setAttribute("id","analysebutton");
+ analysebutton.textContent = "text analysieren";
+
+
+
+ let ergebnisdiv = document.createElement("div");
+ ergebnisdiv.style.display = "flex";
+ ergebnisdiv.style.justifyContent ="space-evenly";
+ let analysecontainer = document.createElement("div");
+ ergebnisdiv.setAttribute("id","ergebnisdiv");
+ analysebuttondiv.appendChild(analysebutton);
+ analysebuttondiv.style.display = "flex";
+ analysebuttondiv.style.justifyContent = "center";
+
+
+
+ analysecontainer.appendChild(analysebuttondiv);
+ analysecontainer.appendChild(ergebnisdiv);
+ 
+ header.innerHTML = '<h2 class="field field--name-title field--type-ds field--label-hidden">Plagiatsresolution und -maßnahmen</h2>';
 let content = document.createElement("div");
 content.setAttribute("class","content");
-content.innerHTML =  '<div class="paragraphs-items paragraphs-items-field-pcf-content paragraphs-items-field-pcf-content-full paragraphs-items-full"><div class="field field-name-field-pcf-content"><div class="entity entity-paragraphs-item paragraphs-item-para-text"><div class="field field--name-field-pf-text-wysiwyg field--type-text-long field--label-hidden"></div></div></div></div>';
+content.innerHTML =  '<div class="paragraphs-items paragraphs-items-field-pcf-content paragraphs-items-field-pcf-content-full paragraphs-items-full"><div class="field field-name-field-pcf-content"><div class="entity entity-paragraphs-item paragraphs-item-para-text"><div class="field field--name-field-pf-text-wysiwyg field--type-text-long field--label-hidden"><p><strong>Resolution zum akademischen Ethos und zu den akademischen Standards</strong></p><p>In guter Tradition und anlässlich der öffentlichen Diskussion zum Plagiatsthema sieht sich die HochschuleBonn-Rhein-Sieg in der Pflicht, ihre Position klar und eindeutig zu bekunden und hochschulweit Maßnahmeneinzuleiten.</p> <p> 1. Die Hochschule Bonn-Rhein-Sieg bekennt sich mit dieser Resolution öffentlich zum akademischen Ethos und den akademischen Standards.</p><p> 2. Die Hochschule Bonn-Rhein-Sieg sieht sich verpflichtet, alle Studierende frühzeitig im Studium sowohlüber den wissenschaftlichen Auftrag und den akademischen Ethos als auch über die Konsequenzen seiner Missachtung aufzuklären. In allen Studiengängen wird intensiv in die wissenschaftliche Arbeits- undDenkweise eingeführt und über den akademischen Ethos und die akademischen Standards klar und eindeutig aufgeklärt.</p><p>3. In einer Selbstverpflichtungserklärung zum akademischen Ethos geben alle Studierende der Hochschule Bonn-Rhein-Sieg spätestens gegen Ende des ersten Studienjahres zum Ausdruck, dass sie sich von den Dozentinnen und Dozenten der Hochschule Bonn-Rhein-Sieg hinreichend über den akademischen Ethos und die akademischen Standards aufgeklärt sind und diese beachten werden.</p><p> Der Senat befürwortete in seiner Sitzung am 03.05.2012 die Resolution in der o.g. Fassung.</p><p><strong>Eckpunkte zur Plagiatsprüfung</strong></p>          <p>Der Senat empfiehlt:</p><p> 1. Die Aufklärung und das Bekenntnis zum akademischen Ethos und den akademischen Standards muss feste Bestandteil aller Curricula aller Studiengänge im ersten Studienjahr sein. Alle Curricula aller Studiengänge werden darauf hin geprüft und ggfs. ergänzt.</p><p>2. Alle Abschlussarbeiten werden auf Plagiate geprüft.</p><p>3. Alle Abschlussarbeiten mit Plagiaten werden grundsätzlich als Fehlversuch gewertet.</p><p> 4. Die Entscheidung, ob die Arbeit Plagiate enthält, liegt zuerst bei den Gutachterinnen und Gutachtern. Der Nachweis in einem Gutachten reicht.</p> <p> 5. Alle Abschlussarbeiten werden grundsätzlich auch in elektronischer Form (PDF-Format und Originalformat wie Word, OpenOffice, ...) eingereicht.</p> <p> 6. Alle Abschlussarbeiten ohne Sperrvermerk werden einem vom Fachbereich definierten Kreis zur Einsicht zur Verfügung gestellt. Alle Abschlussarbeiten sollten nach Möglichkeit grundsätzlich zur Veröffentlichung freigegeben werden. Wissenschaft zielt auf Veröffentlichung ab. Nichtveröffentlichung sollte nur in begründeten und durch den Prüfungsausschuss genehmigten Ausnahmefällen geschehen.</p><p>  7. Im Bereich von Seminar-, Hausarbeiten und Praktikumsberichten behält sich die Hochschule  stichprobenartige Plagiatsprüfungen vor.</p> <p>  <strong>Selbstverpflichtungserklärung der Studierenden:</strong></p> <p>  Eine akademische Arbeit stellt eine individuelle Leistung dar, die eigenständig und allein auf Basis der im Literaturverzeichnis angegebenen Quellen erstellt wurde und in der alle Zitate als solche gekennzeichnet sind.</p><p> "Ich erkläre hiermit, dass ich den akademischen Ehrencodex kenne und über die Folgen einer Missachtung oder Verletzung aufgeklärt worden bin."</p></div></div></div></div>';;
+let ueberschriftcontainer = document.createElement("div");
+let brschrft = document.createElement("h1");
+brschrft.appendChild(document.createTextNode("Textanalyse mit filter-map-reduce"));
+ueberschriftcontainer.appendChild(brschrft);
 
 
 Plagiatsresolution.appendChild(header);
 Plagiatsresolution.appendChild(content);
+main_header_ref.appendChild(ueberschriftcontainer);
+main_main_ref.appendChild(analysecontainer);
 main_main_ref.appendChild(Plagiatsresolution);
-console.log(Plagiatsresolution);
+let analysebuttonref = document.getElementById("analysebutton");
+analysebuttonref.addEventListener("click",()=>{
+  let Plagiatsresolutionref = document.getElementById("plagiatresolution");
+  let all = Array.from(Plagiatsresolutionref.getElementsByTagName("*"));
+  let fil = all.map((item)=>item=item.nodeName.toLowerCase());
+  let table = document.createElement("table");
+ 
+  
+
+
+  
+let tagset = new Set();
+let array2d = new Array();
+fil.forEach((x)=>tagset.add(x));
+for(let i=0;i<tagset.size;i++){
+  array2d.push([Array.from(tagset)[i],fil.reduce((count, num) => num === Array.from(tagset)[i] ? count + 1 : count, 0)]);
+
+}
+
+let mostusedtag = array2d[0];
+for(let i=0;i<array2d.length;i++){
+  console.log(mostusedtag[1]+" "+array2d[i][1]);
+if(array2d[i][1]>mostusedtag[1]){
+ 
+  mostusedtag = array2d[i];
+}
+}
+table.style.textAlign = "center";
+let reihe = table.insertRow(-1);
+  let zelle = reihe.insertCell(0);
+  zelle.innerHTML = '<b>HTML-Tag</b>';
+  zelle = reihe.insertCell(1);
+  zelle.innerHTML = '<b>Anzahl</b>';
+  
+for(let i=0;i<array2d.length;i++){
+  let reihe = table.insertRow(-1);
+  let zelle = reihe.insertCell(0);
+  zelle.appendChild(document.createTextNode("<"+array2d[i][0]+">"));
+  zelle = reihe.insertCell(1);
+  zelle.appendChild(document.createTextNode(array2d[i][1]));
+  if(i%2==0){
+    reihe.style.backgroundColor = "#dddd";
+  }
+
+
+}
+
+ergebnisdiv.appendChild(table);
+fetch('https://raw.githubusercontent.com/stopwords-iso/stopwords-de/master/stopwords-de.txt')
+  .then(response => response.text())
+  .then(text => { let stops = text.split(/\r?\n/);
+
+  let stoparray2d = new Array();
+  
+  let alltext = main_container.textContent.toLowerCase().replaceAll(",","").replaceAll(".","").replaceAll("-","").replaceAll("(","").replaceAll(")","").replaceAll(":","");
+ let alltextsplitted = alltext.split(" "); 
+ 
+ for(let i=0;i<stops.length;i++){
+  
+  stoparray2d.push([stops[i],alltextsplitted.reduce((count, num) => num === stops[i] ? count + 1 : count, 0)]);
+ }
+
+
+ let filtered = stoparray2d.filter(x=>x[1]>=10);
+ let tabelle = document.createElement("table");
+ tabelle.style.textAlign = "center";
+ let row = tabelle.insertRow(-1);
+ let column = row.insertCell(0);
+ column.innerHTML = '<b>Stopwörter</b>';
+ column = row.insertCell(1);
+ column.innerHTML = '<b>Anzahl</b>';
+ filtered.forEach(x=>{let row =tabelle.insertRow(-1);
+let column = row.insertCell(0);
+column.appendChild(document.createTextNode(x[0]));
+column = row.appendChild(document.createTextNode(x[1]));
+if(filtered.indexOf(x)%2==0){
+    row.style.backgroundColor = "#dddd";
+  }
+});
+let ergebnisdivref = document.getElementById("ergebnisdiv");
+ergebnisdivref.appendChild(tabelle);
+
+
+
+
+  });
+
+});
+
+
+
+
+
+
+
 
  
+
+
+  
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
 
 
     }   
