--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+<script src="https://unpkg.com/vue@2.6.0"></script>
     
 </script>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Title</title>
@@ -113,15 +116,18 @@ grid-column: 3/4;
 }
 
 #loginbutton{
+  cursor:pointer;
   float:right;
- border-radius: 15px;
-  font-size: 1rem;
+background-color: #34568B;
+color:white;
+  font-size: 1.3rem;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right:10px;
  width:100px;
- background-color:  
-white; 
+
+border:none;
+
 }
 
 #sidebar{
@@ -179,7 +185,27 @@ color: black;
 #u1button:hover{
   background-color: #e7e9eb;
 }
+@media screen and (min-width: 450px){
 
+  .container{
+    grid-template-columns: repeat(8,1fr);
+ grid-template-rows: auto 1fr auto;
+
+  }
+  #header{grid-column:1/9;
+grid-row:1/2;}
+
+#footer{
+  grid-column: 1/9;grid-row: 3/4;
+  
+}
+
+#main{
+  
+ grid-column:2/8;
+ grid-row:2/3;
+}
+}
 
 @media screen and (min-width: 992px) {
 .container{
@@ -213,12 +239,16 @@ grid-row:1/2;}
    </div>
    <div class="loginbar">
     <div id ="loginbuttondiv">
-  <button id="loginbutton" onclick="setup_login()">Login</button>
+  <button id="loginbutton" onclick="setup_login()">  Login  </button>
     </div>
    </div>
 </div>
 <main id="main">
-  
+  <div id ="vue">
+    <p>Buchstaben : {{buchstaben}}</p>
+    <p>Leerzeichen : {{leerzeichen}}</p>
+    <p>Wörter : {{woerter}}</p>
+  </div>
 </main>
 
 <div id="footer">
@@ -253,7 +283,7 @@ grid-row:1/2;}
 <button class="drpdwnbtn" onclick=""></button>
 <div class="dropdown-container"></div>
 <button onclick="setup_tic_tac_toe()">Tic Tac Toe</button>
-<button onclick="setup_covid19_barchart()">Covid19 Fälle</button>
+<button onclick="setup_covid19_barchart()">Covid19 Fälle in Deutschland</button>
 
  </div>
   
@@ -261,6 +291,8 @@ grid-row:1/2;}
   <div id="sidenavoverlay"></div>
  
 </div>
+
+
 
 <script src="script.js"></script>
 
