--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="https://d3js.org/d3.v4.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+<script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="https://unpkg.com/vue@2.7"></script>
+<script scr="charts.js"></script>
 
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -252,9 +251,7 @@ margin-right:40px;
 
    </div>
    <div class="loginbar">
-    <div id ="loginbuttondiv">
-  <button id="loginbutton">  Login  </button>
-    </div>
+
    </div>
 </div>
 <main id="main">
@@ -270,7 +267,7 @@ margin-right:40px;
 
  <div class="sidenavigation" id="sidenav">
  <div id="exitbutton">
-  <a href="#"><i class="fa fa-times"></i></a> 
+  <a id="sidenavclosebutton" href="#"><i class="fa fa-times"></i></a> 
  </div>
     
  
