--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <script src="https://unpkg.com/vue@2.7"></script>
 <script scr="charts.js"></script>
+<script src="Vuesinglefile.js"></script>
 
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -392,7 +393,7 @@ width:10rem;
  
 <p style="text-align:center">Hallo, Gast</p>
 <hr style="width:90%">
-
+<button class="regularButton">Web Inventors</button>
 <button class="regularButton">Performanz-Messungen von DOM-Operationen</button>
 <button class="regularButton">Rednerliste mit Zeitmessung</button>
 <button class="regularButton">TopSort als Web-App</button>
