--- a/übungen/übung2_2_v2.html
+++ b/übungen/übung2_2_v2.html
@@ -13,13 +13,13 @@ display:block;
 
 position:absolute;
  display:none;
-  z-index=2;
+  z-index:2;
   }
    #div2{
 height:770px;
 width:71%;
 border: 1px solid black;
-z-index=0;
+z-index:0;
 
 
 
